--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create unit tests for React components with JSX language",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,22 @@
   "bugs": {
     "url": "https://github.com/kneczaj/jsx-test-renderer/issues"
   },
-  "homepage": "https://github.com/kneczaj/jsx-test-renderer#readme"
+  "homepage": "https://github.com/kneczaj/jsx-test-renderer#readme",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "jest": "^26.6.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
+  "devDependencies": {
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
+  }
 }
