--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Create unit tests for React components with JSX language",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
