--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "jsx": "react",
     "lib": [
       "DOM",
