--- a/package.json
+++ b/package.json
@@ -36,21 +36,26 @@
   },
   "homepage": "https://github.com/kneczaj/react-component-testing-library#readme",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "jest": "^26.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
   },
   "jest": {
     "preset": "ts-jest"
   },
   "devDependencies": {
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "peerDependencies": {
+    "react": ">= 16 < 18",
+    "react-dom": ">= 16 < 18",
+    "jest": ">= 26 < 27"
   },
   "type": "module"
 }
