--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-component-testing-library",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Create unit tests for React components with JSX language",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,17 +35,16 @@
     "url": "https://github.com/kneczaj/react-component-testing-library/issues"
   },
   "homepage": "https://github.com/kneczaj/react-component-testing-library#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "jest": {
     "preset": "ts-jest"
   },
   "devDependencies": {
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "jest": "^26.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -53,9 +52,9 @@
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
+    "jest": ">= 26 < 27",
     "react": ">= 16 < 18",
-    "react-dom": ">= 16 < 18",
-    "jest": ">= 26 < 27"
+    "react-dom": ">= 16 < 18"
   },
   "type": "module"
 }
